--- a/docker-compose-hdfs.yml
+++ b/docker-compose-hdfs.yml
@@ -30,3 +30,19 @@ services:
       - master
     ports:
       - 8081:8081
+
+  hadoop:
+    image: harisekhon/hadoop:2.8
+    hostname: hadoop
+    ports:
+      #- 8020:8020
+      - 8042:8042
+      - 8088:8088
+      #- 9000:9000
+      #- 10020:10020
+      - 19888:19888
+      - 50010:50010
+      - 50020:50020
+      - 50070:50070
+      - 50075:50075
+      - 50090:50090
